refactor: improve JSON handling and null checks in ConfluentSchemaResolverIntegrationTest and HeadersTextMapSetter